--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
 node_js:
  - "node"
+install:
+  - npm install -g codecov
+  - npm install
 script:
- - npm run test
+- npm run test -- --coverage
+- codecov
 after_success:
   - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
   - chmod +x send.sh
