--- a/package.json
+++ b/package.json
@@ -76,7 +76,12 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "istanbul": "^0.4.5",
+    "istanbul-api": "^2.0.6",
+    "istanbul-reports": "^2.0.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0"
   },
   "peerDependencies": {
     "react": ">=0.14",
@@ -84,7 +89,8 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
+      "src/**/*.{js,jsx,mjs}",
+      "!**/tests/**"
     ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
