--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simple-keyboard",
-  "version": "1.9.2",
+  "version": "1.10.0",
   "description": "React.js Virtual Keyboard",
   "main": "build/index.js",
   "scripts": {
@@ -35,9 +35,7 @@
     "osk"
   ],
   "license": "MIT",
-  "dependencies": {
-    "simple-keyboard": "^2.8.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
@@ -84,6 +82,7 @@
     "react-dom": "^16.6.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
+    "simple-keyboard": "^2.8.1",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
