--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simple-keyboard",
-  "version": "1.16.3",
+  "version": "1.16.4",
   "description": "React.js Virtual Keyboard",
   "main": "build/index.js",
   "scripts": {
@@ -34,11 +34,11 @@
     "kiosk",
     "osk"
   ],
-  "license": "(MIT or GPL-3.0)",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.3.3",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "4.1.0",
@@ -47,7 +47,7 @@
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.1",
-    "babel-preset-react-app": "^7.0.0",
+    "babel-preset-react-app": "^7.0.1",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "2.4.2",
@@ -55,8 +55,8 @@
     "css-loader": "2.1.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "5.14.0",
-    "enzyme": "^3.8.0",
+    "eslint": "5.14.1",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint-config-react-app": "^3.0.7",
     "eslint-loader": "2.1.2",
@@ -74,25 +74,25 @@
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.2.1",
+    "pnp-webpack-plugin": "1.3.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.16.4",
     "prettier-webpack-plugin": "^1.2.0",
-    "react": "^16.8.2",
+    "react": "^16.8.3",
     "react-app-polyfill": "^0.2.1",
     "react-dev-utils": "^7.0.3",
-    "react-dom": "^16.8.2",
+    "react-dom": "^16.8.3",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
-    "simple-keyboard": "^2.15.2",
+    "simple-keyboard": "^2.15.3",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
-    "webpack": "4.29.4",
-    "webpack-dev-server": "3.1.14",
+    "webpack": "4.29.5",
+    "webpack-dev-server": "3.2.0",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
