--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simple-keyboard",
-  "version": "1.18.0",
+  "version": "1.19.0",
   "description": "React.js Virtual Keyboard",
   "main": "build/index.js",
   "scripts": {
@@ -55,9 +55,9 @@
     "css-loader": "2.1.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "5.15.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
+    "eslint": "5.15.0",
     "eslint-config-react-app": "^3.0.7",
     "eslint-loader": "2.1.2",
     "eslint-plugin-flowtype": "3.4.2",
@@ -87,7 +87,7 @@
     "react-dom": "^16.8.3",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
-    "simple-keyboard": "^2.17.0",
+    "simple-keyboard": "2.18.1",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
     "url-loader": "1.1.2",
