--- a/package.json
+++ b/package.json
@@ -174,7 +174,8 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ],
     "plugins": [
       [
