--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simple-keyboard",
-  "version": "1.26.6",
+  "version": "1.27.0",
   "description": "React.js Virtual Keyboard",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -80,13 +80,13 @@
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
-    "prettier": "^1.17.0",
-    "prettier-webpack-plugin": "^1.2.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "prettier": "^1.17.0",
+    "prettier-webpack-plugin": "^1.2.0",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
@@ -95,7 +95,7 @@
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.3.1",
     "semver": "6.3.0",
-    "simple-keyboard": "2.26.3",
+    "simple-keyboard": "file:../simple-keyboard",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
