--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.17.0",
     "prettier-webpack-plugin": "^1.2.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
     "resolve": "1.12.0",
