--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simple-keyboard",
-  "version": "2.3.149",
+  "version": "2.4.0",
   "description": "React.js Virtual Keyboard",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -41,21 +41,24 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.11.5",
+    "@babel/core": "7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@svgr/webpack": "5.4.0",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
-    "babel-eslint": "10.1.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^6.0.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "copy-webpack-plugin": "^5.1.2",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "4.2.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -69,17 +72,16 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
-    "file-loader": "6.1.0",
+    "file-loader": "6.0.0",
     "fs-extra": "9.0.1",
-    "html-webpack-plugin": "4.4.1",
+    "html-webpack-plugin": "4.3.0",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^2.2.0",
     "jest": "26.4.2",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "26.4.0",
     "jest-watch-typeahead": "0.6.0",
-    "mini-css-extract-plugin": "0.11.0",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "mini-css-extract-plugin": "0.10.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
@@ -90,17 +92,17 @@
     "prettier-webpack-plugin": "^1.2.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
-    "react-dev-utils": "10.1.0",
+    "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "resolve": "1.17.0",
     "resolve-url-loader": "3.1.1",
-    "sass-loader": "10.0.1",
+    "sass-loader": "10.0.0",
     "semver": "7.3.2",
-    "simple-keyboard": "^2.29.111",
+    "simple-keyboard": "^2.30.1",
     "style-loader": "1.2.1",
     "terser-webpack-plugin": "4.1.0",
     "ts-pnp": "1.2.0",
-    "uglifyjs-webpack-plugin": "^2.1.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "4.1.0",
     "webpack": "4.44.1",
     "webpack-dev-server": "3.11.0",
@@ -142,7 +144,9 @@
     "setupFiles": [
       "react-app-polyfill/jsdom"
     ],
-    "setupFilesAfterEnv": [],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
       "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
