--- a/package.json
+++ b/package.json
@@ -110,8 +110,8 @@
     "workbox-webpack-plugin": "6.1.0"
   },
   "peerDependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "^16.14.0 || ^17.0.0",
+    "react-dom": "^16.14.0 || ^17.0.0"
   },
   "eslintConfig": {
     "extends": "react-app"
