--- a/.github/workflows/mirroring.yml
+++ b/.github/workflows/mirroring.yml
@@ -6,10 +6,8 @@ jobs:
   mirroring:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v1
-    - uses: pixta-dev/repository-mirroring-action@v1
-      with:
-        target_repo_url:
-          git@gitlab.com:hodgef/react-simple-keyboard.git
-        ssh_private_key:
-          ${{ secrets.GL_KEY }}
+      - uses: actions/checkout@v1
+      - uses: pixta-dev/repository-mirroring-action@v1
+        with:
+          target_repo_url: git@gitlab.com:hodgef/react-simple-keyboard.git
+          ssh_private_key: ${{ secrets.GL_KEY }}
