--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
       "lib": ["es2020", "dom"],
       "moduleResolution": "node",
       "downlevelIteration": true,
-      "jsx": "react"
+      "jsx": "react",
+      "strict": true
     },
     "include": ["src/lib"],
     "exclude": ["src/lib/**/tests"],
