--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    if: github.ref == 'refs/heads/master'
+    if: contains(github.ref, 'master')
     strategy:
       matrix:
         node-version: [12.x]
