Add modern browser bundle

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-simple-keyboard",
-  "version": "3.2.108",
+  "version": "3.3.0",
   "description": "React.js Virtual Keyboard",
   "main": "build/index.js",
   "types": "build/types/index.d.ts",
   "scripts": {
     "start": "webpack serve --config webpack.config.demo.js",
-    "build": "webpack && tsc",
+    "build": "webpack && npm run build-modern && tsc",
+    "build-modern": "webpack --config webpack.config.modern.js",
     "test": "jest --silent",
     "coverage": "npm run test -- --coverage",
     "prepare": "npm run build",
@@ -74,7 +75,7 @@
     "prettier-webpack-plugin": "^1.2.0",
     "react": "^16.14.0 || ^17.0.0",
     "react-dom": "^16.14.0 || ^17.0.0",
-    "simple-keyboard": "3.2.69",
+    "simple-keyboard": "3.3.2",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.2.4",
     "typescript": "^4.4.3",
